--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,19 @@
 #boards {
     background-color: green;
 }
+
+.board-container {
+    border: darkcyan 1px solid;
+    border-radius: 5px;
+    margin: 15px auto;
+    padding: 15px;
+}
+
+.status-content {
+    padding: 20px;
+    border: black 1px solid;
+}
+
+.status-head {
+    text-align: center;
+}
