--- a/templates/boards.html
+++ b/templates/boards.html
@@ -7,6 +7,8 @@
         <title>ProMan</title>
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
+        <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
         <script src="{{ url_for('static', filename='js/data_handler.js') }}" defer></script>
         <script src="{{ url_for('static', filename='js/dom.js') }}" defer></script>
         <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
@@ -14,5 +16,28 @@
     <body>
         <h1>ProMan</h1>
         <div id="boards">Boards are loading...</div>
+
+        <div class="board-container">
+            <div class="board-header row">
+                <div class="col-sm-10 col-md-8">
+                    <p>${board.title}</p>
+                </div>
+                <div class="col-sm-2 col-md-4">
+                    <p><button class="btn btn-success">New Card</button></p>
+                </div>
+            </div>
+            <div class="status-header row">
+                <div class="status-head col-sm-3">New</div>
+                <div class="status-head col-sm-3">In progress</div>
+                <div class="status-head col-sm-3">Testing</div>
+                <div class="status-head col-sm-3">Done</div>
+            </div>
+            <div class="status-content row">
+                <div class="board-status-new card-container col-sm-3"></div>
+                <div class="board-status-in-progress card-container col-sm-3"></div>
+                <div class="board-status-testing card-container col-sm-3"></div>
+                <div class="board-status-done card-container col-sm-3"></div>
+            </div>
+        </div>
     </body>
 </html>
