--- a/static/css/main.css
+++ b/static/css/main.css
@@ -5,7 +5,7 @@
 .board-container {
     border: darkcyan 1px solid;
     border-radius: 5px;
-    margin: 15px auto;
+    margin: 15px 20px;
     padding: 15px;
 }
 
