--- a/templates/boards.html
+++ b/templates/boards.html
@@ -8,16 +8,52 @@
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
         <script src="{{ url_for('static', filename='js/data_handler.js') }}" defer></script>
+        <script src="{{ url_for('static', filename='js/utils.js') }}" defer></script>
         <script src="{{ url_for('static', filename='js/template_handler.js') }}" defer></script>
         <script src="{{ url_for('static', filename='js/dom.js') }}" defer></script>
         <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
     </head>
     <body>
-        <h1>ProMan</h1>
+        <div class="container">
+            <div class="page-header-row row">
+                <div class="col-sm-8 col-md-6">
+                    <h1>ProMan</h1>
+                </div>
+                <div class="col-sm-4 col-md-6">
+                    <p>
+                        <button class="btn btn-success"
+                                type="button"
+                                data-toggle="modal"
+                                data-target="#new-board-modal">New Board</button>
+                    </p>
+                </div>
+            </div>
+        </div>
         <div id="boards-div">Boards are loading...</div>
 
+        <div class="modal fade" id="new-board-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title">Create new board</h3>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="">
+                            <input type="text" id="new-board-title" placeholder="Enter board title">
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="save-board-button" type="submit" data-dismiss="modal">Save board</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </body>
 </html>
