bugged version, tried to implement adding cards

--- a/templates/boards.html
+++ b/templates/boards.html
@@ -54,5 +54,25 @@
             </div>
         </div>
 
+        <div class="modal fade" id="new-card-modal">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h3 class="modal-title">Create new card</h3>
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    </div>
+                    <div class="modal-body">
+                        <form action="">
+                            <input type="text" id="new-card-title" placeholder="Enter card title">
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-primary" id="save-board-button" type="submit" data-dismiss="modal">Save card</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
     </body>
 </html>
