fixed card saving event listeners

--- a/templates/boards.html
+++ b/templates/boards.html
@@ -67,7 +67,7 @@
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-primary" id="save-board-button" type="submit" data-dismiss="modal">Save card</button>
+                        <button class="btn btn-primary" id="save-card-button" type="submit" data-dismiss="modal">Save card</button>
                     </div>
                 </div>
             </div>
