--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,24 +1,67 @@
-#boards {
-    background-color: green;
+body {
+    font-family: 'Bai Jamjuree', sans-serif;
+}
+h1 {
+    text-align: center;
+    color: #002526;
+    padding: 10px;
+}
+
+.header-div {
+    margin: auto 20px;
 }
 
 .board-container {
-    border: darkcyan 1px solid;
     border-radius: 5px;
     margin: 15px 20px;
     padding: 15px;
+    background-color: #e7f4f4;
 }
 
 .status-content {
     padding: 20px;
-    border: black 1px solid;
 }
 
 .status-head {
     text-align: center;
 }
 
-.card {
-    border: 1px solid red;
-    border-radius: 4px;
+.heading-text, .status-head {
+    color: #002526;
+    font-weight: bold;
 }
+
+.heading-text {
+    font-size: large;
+}
+
+.task-card {
+    border-radius: 4px;
+    border: 1px solid white;
+    width: 80%;
+    padding: 5px;
+    margin: auto;
+    background-color: darkcyan;
+    color: white;
+}
+
+.board-status {
+    border: 2px solid #e7f4f4;
+    border-radius: 4px;
+    background-color: white;
+    padding: 15px;
+}
+.btn-info, .btn-info:hover, .btn-info:active, .btn-info:visited {
+    background-color: #00BFB3 !important;
+    border: 1px solid #00BFB3 !important;
+    color: #002526 !important;
+}
+
+.btn-success {
+    color: #002526 !important;
+}
+
+.page-header-row {
+    padding: 15px;
+}
+
