--- a/templates/boards.html
+++ b/templates/boards.html
@@ -4,10 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>ProMan</title>
+        <title>ProMan by The Magic Mongooses</title>
 
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css?family=Bai+Jamjuree" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/main.css') }}">
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -18,20 +19,12 @@
         <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
     </head>
     <body>
-        <div class="container">
-            <div class="page-header-row row">
-                <div class="col-sm-8 col-md-6">
-                    <h1>ProMan</h1>
-                </div>
-                <div class="col-sm-4 col-md-6">
-                    <p>
-                        <button class="btn btn-success"
-                                type="button"
-                                data-toggle="modal"
-                                data-target="#new-board-modal">New Board</button>
-                    </p>
-                </div>
-            </div>
+        <h1>Magic Mongooses' ProMan</h1>
+        <div class="header-div container-fixed">
+            <button class="btn btn-success"
+                    type="button"
+                    data-toggle="modal"
+                    data-target="#new-board-modal">New Board</button>
         </div>
         <div id="boards-div">Boards are loading...</div>
 
@@ -43,12 +36,16 @@
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                     </div>
                     <div class="modal-body">
-                        <form action="">
-                            <input type="text" id="new-board-title" placeholder="Enter board title">
+                        <form id="new-board-form">
+                            <input type="text" id="new-board-title" placeholder="Enter board title" required>
                         </form>
                     </div>
                     <div class="modal-footer">
-                        <button class="btn btn-primary" id="save-board-button" type="submit" data-dismiss="modal">Save board</button>
+                        <button class="btn btn-primary"
+                                id="save-board-button"
+                                type="submit"
+                                data-dismiss="modal"
+                                form="new-board-form">Save board</button>
                     </div>
                 </div>
             </div>
@@ -59,16 +56,24 @@
                 <div class="modal-content">
                     <div class="modal-header">
                         <h3 class="modal-title">Create new card</h3>
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <button type="button"
+                                class="close"
+                                data-dismiss="modal">&times;</button>
                     </div>
-                    <div class="modal-body">
-                        <form action="">
-                            <input type="text" id="new-card-title" placeholder="Enter card title">
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-primary" id="save-card-button" type="submit" data-dismiss="modal">Save card</button>
-                    </div>
+                    <form id="new-card-form" action="">
+                        <div class="modal-body">
+                            <input type="text"
+                                   id="new-card-title"
+                                   placeholder="Enter card title"
+                                   required>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-primary"
+                                    id="save-card-button"
+                                    type="submit"
+                                    data-dismiss="modal" form="new-card-form">Save card</button>
+                        </div>
+                    </form>
                 </div>
             </div>
         </div>
