--- a/templates/boards.html
+++ b/templates/boards.html
@@ -64,6 +64,7 @@
                         <div class="modal-body">
                             <input type="text"
                                    id="new-card-title"
+                                   class="new-card-title"
                                    placeholder="Enter card title"
                                    required>
                         </div>
