--- a/templates/boards.html
+++ b/templates/boards.html
@@ -22,7 +22,8 @@
     <body>
         <h1>Magic Mongooses' ProMan</h1>
         <div class="header-div container-fixed">
-            <button class="btn btn-success"
+            <button id="new-board-button"
+                    class="btn btn-success"
                     type="button"
                     data-toggle="modal"
                     data-target="#new-board-modal">New Board</button>
