added error handling to reg & login

--- a/templates/login.html
+++ b/templates/login.html
@@ -24,6 +24,11 @@
                 </form>
             </div>
         </div>
+        {% if error_message %}
+        <div class="error-message">
+            <p><strong>{{ error_message }}</strong></p>
+        </div>
+        {% endif %}
     </div>
 
 
