--- a/static/css/main.css
+++ b/static/css/main.css
@@ -84,7 +84,14 @@ div#buttons-container {
     text-align: center;
 }
 
+.error-message {
+    color: red;
+    text-align: center;
+}
 
+input {
+    border-radius: 4px;
+}
 
 .delete-buttons-of-cards {
     margin: auto 5px;
